# wyncast

./: .gitignore  Cargo.toml  INSTALL.md  README.md  justfile
crates/wyncast-app/: Cargo.toml
crates/wyncast-app/src/: lib.rs  protocol.rs
crates/wyncast-app/src/app/: command_handler.rs  llm_request_manager.rs  mod.rs  onboarding_handler.rs  ws_handler.rs
crates/wyncast-app/src/onboarding/: mod.rs  strategy_config.rs
crates/wyncast-baseball/: Cargo.toml
crates/wyncast-baseball/src/: lib.rs  test_utils.rs
crates/wyncast-baseball/src/draft/: pick.rs  roster.rs
crates/wyncast-baseball/src/llm/: mod.rs  prompt.rs
crates/wyncast-baseball/src/valuation/: analysis.rs  auction.rs  mod.rs  projections.rs  scarcity.rs  zscore.rs
crates/wyncast-core/: Cargo.toml
crates/wyncast-core/src/: config.rs  db.rs  espn.rs  lib.rs  migrations.rs  nomination.rs  picks.rs  stats.rs
crates/wyncast-core/src/llm/: events.rs  mod.rs
crates/wyncast-gui/: Cargo.toml
crates/wyncast-gui/src/: app.rs  bridge.rs  focus.rs  main.rs  message.rs  persistence.rs  theme.rs
crates/wyncast-gui/src/forms/: llm_form.rs  mod.rs  strategy_form.rs
crates/wyncast-gui/src/modals/: mod.rs  position_filter.rs  quit_confirm.rs
crates/wyncast-gui/src/screens/: disconnected.rs  mod.rs
crates/wyncast-gui/src/widgets/: bar_gauge.rs  data_table.rs  filter_input.rs  focus_ring.rs  keyboard_help_overlay.rs  mod.rs  overlay.rs  scrollable_markdown.rs  split_pane.rs
crates/wyncast-llm/: Cargo.toml
crates/wyncast-llm/src/: client.rs  lib.rs
crates/wyncast-tui/: Cargo.toml
crates/wyncast-tui/src/: db.rs  lib.rs  main.rs  protocol.rs
crates/wyncast-tui/src/app/: command_handler.rs  llm_request_manager.rs  mod.rs  onboarding_handler.rs
crates/wyncast-tui/src/draft/: pick.rs  state.rs
crates/wyncast-tui/src/llm/: mod.rs  prompt.rs
crates/wyncast-tui/src/onboarding/: fs.rs  mod.rs
crates/wyncast-tui/src/tui/: app.rs  confirm_dialog.rs  home.rs  layout.rs  llm_stream.rs  mod.rs
crates/wyncast-tui/src/valuation/: analysis.rs  auction.rs  mod.rs  projections.rs  vor.rs  zscore.rs
crates/wyncast-tui/tests/: integration_tests.rs  scaffold_test.rs
crates/wyncast-tui/tests/fixtures/: sample_hitters.csv  sample_strategy.toml
draft-assistant/: .gitignore  Cargo.toml
draft-assistant/config/: credentials.toml.example  league.toml
draft-assistant/data/: adp.csv  holds_projections.csv
draft-assistant/data/projections/: hitters.csv  pitchers.csv
draft-assistant/defaults/: credentials.toml.example  league.toml  strategy.toml
draft-assistant/extension/: BUILD.md  background-core.js  background.js  build.py  build.sh  manifest.json  sync_env.py  test_build.py
draft-assistant/extension/chrome/: background.js  manifest.json  offscreen.html  offscreen.js
draft-assistant/extension/content_scripts/: espn-matchup.js  espn.js
draft-assistant/extension/firefox/: background.js  manifest.json
draft-assistant/extension/src/: background-core.js
draft-assistant/migrations/: V001__initial_schema.down.sql
draft-assistant/scripts/: INSTALL_README.md  enrich_positions.py  install.ps1  install.sh  package.py  package.sh  test_enrich_positions.py
draft-assistant/src/: app.rs  app_dirs.rs  config.rs  db.rs  lib.rs  main.rs  migrations.rs  protocol.rs  stats.rs  test_utils.rs  ws_server.rs
draft-assistant/src/app/: command_handler.rs  llm_handler.rs  llm_request_manager.rs  mod.rs  onboarding_handler.rs  ws_handler.rs
draft-assistant/src/draft/: mod.rs  pick.rs  roster.rs  state.rs
draft-assistant/src/llm/: client.rs  mod.rs  prompt.rs  provider.rs
draft-assistant/src/matchup/: mod.rs
draft-assistant/src/onboarding/: mod.rs
draft-assistant/src/tui/: action.rs  app.rs  confirm_dialog.rs  home.rs  input.rs  layout.rs  llm_stream.rs  mod.rs  scroll.rs  subscription.rs  text_input.rs
draft-assistant/src/tui/draft/: draft_log.rs  mod.rs  teams.rs
draft-assistant/src/tui/matchup/: layout.rs  mod.rs
draft-assistant/src/tui/onboarding/: llm_setup.rs  mod.rs  strategy_setup.rs
draft-assistant/src/tui/settings/: mod.rs
draft-assistant/src/tui/subscription/: keybinding.rs  mod.rs
draft-assistant/src/tui/widgets/: available.rs  budget.rs  draft_log.rs  llm_analysis.rs  (+10 more)
draft-assistant/src/valuation/: analysis.rs  auction.rs  mod.rs  projections.rs  scarcity.rs  vor.rs  zscore.rs
draft-assistant/tests/: integration_tests.rs  scaffold_test.rs
draft-assistant/tests/fixtures/: mock_draft_events.json  sample_adp.csv  sample_hitters.csv  sample_holds.csv  sample_league.toml  sample_pitchers.csv  sample_pitchers_rp.csv  sample_pitchers_sp.csv  sample_strategy.toml
(+89 files in other folders)
