[package]
name = "wyncast-app"
version.workspace = true
edition.workspace = true

[dependencies]
wyncast-core = { path = "../wyncast-core" }
wyncast-llm = { path = "../wyncast-llm" }
wyncast-baseball = { path = "../wyncast-baseball" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
