[package]
name = "wyncast-baseball"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
wyncast-core = { path = "../wyncast-core" }
wyncast-llm = { path = "../wyncast-llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
csv.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
