[package]
name = "wyncast-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
directories.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
