[package]
name = "wyncast-llm"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
wyncast-core = { path = "../wyncast-core" }
tokio.workspace = true
futures-util.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
