[package]
name = "wyncast-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wyncast"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
csv.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
